infra/overlays/prod/app-ingress-merge.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
        - "sa-prototype.rdieleman.com"
      secretName: ssl-rdieleman.com
