infra/overlays/prod/health-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
        - "health.sa-prototype.rdieleman.com"
      secretName: ssl-rdieleman.com
  rules:
    - host: "health.sa-prototype.rdieleman.com"
      http:
        paths:
          - path: /api/notification/public/health
            pathType: Prefix
            backend:
              service:
                name: notification-service-srv
                port:
                  number: 3005
          - path: /api/chat/public/health/
            pathType: Prefix
            backend:
              service:
                name: chat-service-srv
                port:
                  number: 3004
          - path: /api/campaigns/public/health
            pathType: Prefix
            backend:
              service:
                name: campaign-service-srv
                port:
                  number: 3002
          - path: /api/moderation/public/health
            pathType: Prefix
            backend:
              service:
                name: moderation-service-srv
                port:
                  number: 3000
          - path: /socket/public/health
            pathType: Prefix
            backend:
              service:
                name: socket-service-srv
                port:
                  number: 3001
  ingressClassName: nginx
